[options]
packages = find:

[options.packages.find]
include = rit*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = sklearn
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    # Activate the plugin explicitly to ensure that the seed is reported
    # correctly on the CI when running `pytest --pyargs rit` from the
    # source folder.
    -p sklearn.tests.random_seed

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[codespell]
skip = ./.git,./.mypy_cache
